avoid truncation of long integer literals